2021-09-28 [1.42 Bld 210]

- Bugfix      : Regard Address-Shift instructions with single argument on TMS3201x
- Bugfix      : Be more tolerant about leading/trailing spaces in indirect address
                expressions on 68K

2021-09-19 [1.42 Bld 209]

- Addition    : Add built-in IN/OUT symbols PA0..PA7 for TMS3201x

2021-09-13 [1.42 Bld 208]

- Addition    : Add support for NEC uCOM87 (uPD780x)

2021-07-26 [1.42 Bld 207]

- Bugfix      : NS32K: allow immediate destination operand for CMPf

2021-07-25 [1.42 Bld 206]

- Bugfix      : NS32K: allow immediate destination operand for CMPQi
- Bugfix      : correct address output for Intel32 Hex format

2021-07-03 [1.42 Bld 205]

- Bugfix      : correct encoding and allowed addressing modes of XCH(B) on MCS-96
- Change      : huge internal rework to allow strings longer than 255 characters
                at some (but far off from all...) places

2021-05-08 [1.42 Bld 204]

- Bugfix      : fix SC/MP target

2021-05-07 [1.42 Bld 203]

- Addition    : Allow changing the program counter by assigning value to PC
                symbol
- Addition    : Allow BIGENDIAN for SC/MP
- Bugfix      : Several bugfixes if host system is big-endian

2021-04-25 [1.42 Bld 202]

- Change      : Somewhat less unintuitive error message if source file cannot
                be opened
- Bugfix      : Better handling of DUP operator in DB, DW, DD... if there is
                also a symbol of this name
- Addition    : Add file name to all error messages when file open fails

2021-04-17 [1.42 Bld 201]

- Bugfix      : fix MSP430X MOVA instruction with 0(Rn) or @Rn as destination
- Change      : Logic to update label's value in case of implicit padding gets
                reset by less pseudo instructions

2021-03-28 [1.42 Bld 200]

- Addition    : Add NS32K custom processor instructions
- Addition    : Add NS32K floating point register names Lx
- Bugfix      : repair -D <var>=<value> option

2021-03-19 [1.42 Bld 199]
