@@ -1,6 +1,9 @@
 	cpu	68000
 	page	0
 
+rega3	equ	a3
+.rega3	equ	a3
+
 	; basic 68000 modes
 
 	move.l	d3,d7
@@ -8,12 +11,30 @@
 	move.l	(a3),d7
 	move.l	(a3)+,d7
 	move.l	-(a3),d7
+	move.l	(rega3),d7		; register alias
+	move.l	(rega3)+,d7
+	move.l	-(rega3),d7
+	move.l	(.rega3),d7		; register alias with period (since 1.42 Bld 212)
+	move.l	(.rega3)+,d7
+	move.l	-(.rega3),d7
 	move.l	1000(a3),d7		; "68000 style"
 	move.l	1000( a3),d7
 	move.l	1000(a3 ),d7
+	move.l	1000(rega3),d7		; register alias
+	move.l	1000( rega3),d7
+	move.l	1000(rega3 ),d7
+	move.l	1000(.rega3),d7		; register alias with period (since 1.42 Bld 212)
+	move.l	1000( .rega3),d7
+	move.l	1000(.rega3 ),d7
 	move.l	(1000,a3),d7		; "68020 style"
 	move.l	( 1000, a3),d7
 	move.l	(1000 ,a3 ),d7
+	move.l	(1000,rega3),d7		; register alias
+	move.l	( 1000, rega3),d7
+	move.l	(1000 ,rega3 ),d7
+	move.l	(1000,.rega3),d7	; register alias with period (since 1.42 Bld 212)
+	move.l	( 1000, .rega3),d7
+	move.l	(1000 ,.rega3 ),d7
 	move.l	120(a3,a4.w),d7		; "68000 style"
 	move.l	(120,a3,a4.w),d7	; "68020 style"
 	move.l	120(a3,a4.l),d7		; "68000 style"
